plugins/formal-verification/testData/diagnostics/no_contracts/subtyping.kt
fun <!VIPER_TEXT!>return_subtyping<!>(): Int? {
    return 0
}

fun <!VIPER_TEXT!>assignment_subtyping<!>() {
    var x: Boolean? = false
    x = true
}
